added figure captions and labels to all graphical outputs in in 'SVM_Iris_parameter_tuning.ipynb'

--- a/SVM_Iris_parameter_tuning.ipynb
+++ b/SVM_Iris_parameter_tuning.ipynb
@@ -2,11 +2,22 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b738b8f9-c08b-435b-a840-837c5cb9358c",
+   "id": "817e6dc4-264c-44b1-b467-680529aeda24",
    "metadata": {},
    "source": [
-    "# Introduction\n",
-    "\n",
+    "# Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b738b8f9-c08b-435b-a840-837c5cb9358c",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
+   "source": [
     "## English introduction\n",
     "\n",
     "In the **digitised work environment**, there is an increasing demand for **Work equipment** to be able to adapt independently and in a task-related manner to changing work situations. This **situational adaptivity** can often only be realised through the use of **Artificial Intelligence (AI)** or **Machine Learning (ML)**, depending on the degree of flexibility.\n",
@@ -40,7 +51,12 @@
   {
    "cell_type": "markdown",
    "id": "4e5ba0ae-1be7-449c-8835-63bd5dfb9cac",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    },
+    "tags": []
+   },
    "source": [
     "## German introduction\n",
     "\n",
@@ -6335,7 +6351,12 @@
    "cell_type": "code",
    "execution_count": 28,
    "id": "a61f0685-e8e8-4d51-ae75-d45b8dbc98fb",
-   "metadata": {},
+   "metadata": {
+    "caption": "Histogram for frequency distribution of the salary",
+    "label": "fig:histogram_salary",
+    "tags": [],
+    "widefigure": true
+   },
    "outputs": [
     {
      "data": {
@@ -6357,7 +6378,12 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "740601dd-e6ba-4d27-89ca-b97aea807ae4",
-   "metadata": {},
+   "metadata": {
+    "caption": "Histogram for the frequency distribution of the salary in comparison between men and women",
+    "label": "fig:histogram_male_female",
+    "tags": [],
+    "widefigure": true
+   },
    "outputs": [
     {
      "data": {
@@ -6853,7 +6879,12 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "91f1580c-36a0-4853-977c-8ca52997e988",
-   "metadata": {},
+   "metadata": {
+    "caption": "Correlation heatmap to explore coherences between single variables in the iris dataset",
+    "label": "fig:correlation_heatmap",
+    "tags": [],
+    "widefigure": true
+   },
    "outputs": [
     {
      "data": {
@@ -6934,7 +6965,12 @@
    "cell_type": "code",
    "execution_count": 34,
    "id": "5a01febd-f052-4dfa-adab-c94ac4b112ed",
-   "metadata": {},
+   "metadata": {
+    "caption": "Correlation heatmap, which was cut at its main diagonal without losing any information",
+    "label": "fig:correlation_heatmap_triangle",
+    "tags": [],
+    "widefigure": true
+   },
    "outputs": [
     {
      "data": {
@@ -6988,7 +7024,12 @@
    "cell_type": "code",
    "execution_count": 69,
    "id": "5cf28441-e485-4b6e-b9dc-2d5f85c396b4",
-   "metadata": {},
+   "metadata": {
+    "caption": "Plotting two individual variables of the iris dataset in the scatterplot to explore the relationships between these two",
+    "label": "fig:scatter_plot",
+    "tags": [],
+    "widefigure": true
+   },
    "outputs": [
     {
      "data": {
@@ -7038,7 +7079,12 @@
    "cell_type": "code",
    "execution_count": 36,
    "id": "154e4480-a591-4aae-a834-a1b7c2552c88",
-   "metadata": {},
+   "metadata": {
+    "caption": "Plot all individual variables of the iris dataset in pairs-plot to see both the relationships between two variables and the distribution of the individual variables",
+    "label": "fig:pairs_plot",
+    "tags": [],
+    "widefigure": true
+   },
    "outputs": [
     {
      "data": {
@@ -7257,7 +7303,12 @@
    "cell_type": "code",
    "execution_count": 67,
    "id": "0fc5155e-10bb-4af0-ac0d-0841a50744f5",
-   "metadata": {},
+   "metadata": {
+    "caption": "Checking the accuracy of the model by using the confusion matrix for cross-validation",
+    "label": "fig:confusion_matrix",
+    "tags": [],
+    "widefigure": true
+   },
    "outputs": [
     {
      "data": {
@@ -7746,7 +7797,7 @@
    "id": "65b16839-cb34-4602-9e4d-0ba2225955f8",
    "metadata": {},
    "source": [
-    "## Vary `kernel` parameter\n",
+    "## Vary `kernel` of SVC\n",
     "\n",
     "The `kernel` parameter selects the type of hyperplane that is used to separate the data. Using `linear` ([linear classifier](https://en.wikipedia.org/wiki/Linear_classifier)) kernel will use a linear hyperplane (a line in the case of 2D data). The `rbf` ([radial basis function kernel](https://en.wikipedia.org/wiki/Radial_basis_function_kernel)) and `poly` ([polynomial kernel](https://en.wikipedia.org/wiki/Polynomial_kernel)) kernel use non linear hyperplanes."
    ]
@@ -7756,8 +7807,11 @@
    "execution_count": 48,
    "id": "dd00a864-8729-484a-986f-47f10d7cb8ae",
    "metadata": {
+    "caption": "The group of images shows the effect on the classification by the choice of the different SVC kernels (`linear`, `rbf`, `poly`)",
+    "label": "fig:vary_kernels",
     "scrolled": true,
-    "tags": []
+    "tags": [],
+    "widefigure": true
    },
    "outputs": [
     {
@@ -7819,8 +7873,11 @@
    "execution_count": 49,
    "id": "d239d35b-bb53-477e-abb2-d972e98f5e13",
    "metadata": {
+    "caption": "The group of images shows the effect on the classification by the variation of the parameter `gamma`",
+    "label": "fig:vary_gamma_parameter",
     "scrolled": true,
-    "tags": []
+    "tags": [],
+    "widefigure": true
    },
    "outputs": [
     {
@@ -7902,8 +7959,11 @@
    "execution_count": 50,
    "id": "8489bd76-9cfb-43d7-8562-e3d81c9b9c51",
    "metadata": {
+    "caption": "The group of images shows the effect on the classification by the variation of the parameter `C`",
+    "label": "fig:vary_c_parameter",
     "scrolled": true,
-    "tags": []
+    "tags": [],
+    "widefigure": true
    },
    "outputs": [
     {
@@ -7995,8 +8055,11 @@
    "execution_count": 51,
    "id": "43c2bcfb-a1ae-4f59-af0d-6fa621c3e9ff",
    "metadata": {
+    "caption": "The group of images shows the effect on the classification by the variation of the parameter `degree` of the `poly` kernel",
+    "label": "fig:vary_degree_parameter",
     "scrolled": true,
-    "tags": []
+    "tags": [],
+    "widefigure": true
    },
    "outputs": [
     {
@@ -8146,7 +8209,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.3"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
