changes sizes of included figures in 'SVM_Iris_parameter_tuning.ipynb'

--- a/SVM_Iris_parameter_tuning.ipynb
+++ b/SVM_Iris_parameter_tuning.ipynb
@@ -166,8 +166,7 @@
    "cell_type": "markdown",
    "id": "50a2bb9d-a80d-479e-bdb2-eef7c3809f8f",
    "metadata": {
-    "incorrectly_encoded_metadata": "tags=[] toc-hr-collapsed=true",
-    "toc-hr-collapsed": true
+    "incorrectly_encoded_metadata": "tags=[] toc-hr-collapsed=true toc-hr-collapsed=true"
    },
    "source": [
     "# STEP 1: Exploring the dataset\n",
@@ -259,7 +258,7 @@
     "widefigure": true
    },
    "source": [
-    "![left: *Iris setosa* (source: [Irissetosa1.jpg](https://commons.wikimedia.org/wiki/File:Irissetosa1.jpg), license: public domain); middle: *Iris versicolor* (source: [Iris_versicolor_3.jpg](https://en.wikipedia.org/wiki/File:Iris_versicolor_3.jpg), license: CC-SA 3.0); right: *Iris virginica* (source: [Iris_virginica.jpg](https://en.wikipedia.org/wiki/File:Iris_virginica.jpg), license: CC-SA 2.0)\n",
+    "![Left: *Iris setosa* (source: [Irissetosa1.jpg](https://commons.wikimedia.org/wiki/File:Irissetosa1.jpg), license: public domain); middle: *Iris versicolor* (source: [Iris_versicolor_3.jpg](https://en.wikipedia.org/wiki/File:Iris_versicolor_3.jpg), license: CC-SA 3.0); right: *Iris virginica* (source: [Iris_virginica.jpg](https://en.wikipedia.org/wiki/File:Iris_virginica.jpg), license: CC-SA 2.0)\n",
     "](images/Iris_images.png)"
    ]
   },
@@ -6355,7 +6354,7 @@
     "caption": "Histogram for frequency distribution of the salary",
     "label": "fig:histogram_salary",
     "tags": [],
-    "widefigure": true
+    "widefigure": false
    },
    "outputs": [
     {
@@ -6382,7 +6381,7 @@
     "caption": "Histogram for the frequency distribution of the salary in comparison between men and women",
     "label": "fig:histogram_male_female",
     "tags": [],
-    "widefigure": true
+    "widefigure": false
    },
    "outputs": [
     {
@@ -7080,7 +7079,7 @@
    "execution_count": 36,
    "id": "154e4480-a591-4aae-a834-a1b7c2552c88",
    "metadata": {
-    "caption": "Plot all individual variables of the iris dataset in pairs-plot to see both the relationships between two variables and the distribution of the individual variables",
+    "caption": "Plot all individual variables of the iris dataset in pairs plot to see both the relationships between two variables and the distribution of the individual variables",
     "label": "fig:pairs_plot",
     "tags": [],
     "widefigure": true
@@ -7147,7 +7146,7 @@
     "widefigure": true
    },
    "source": [
-    "![Support Vectors Classifiers (SVC) separate the data points in classes by finding the best hyperplane](images/SVC_operatingPrinciple.png)"
+    "![Support Vectors Classifiers (SVC) separate the data points in classes by finding the best hyperplane by maximizing the margin to its support vectors](images/SVC_operatingPrinciple.png)"
    ]
   },
   {
@@ -7307,7 +7306,7 @@
     "caption": "Checking the accuracy of the model by using the confusion matrix for cross-validation",
     "label": "fig:confusion_matrix",
     "tags": [],
-    "widefigure": true
+    "widefigure": false
    },
    "outputs": [
     {
@@ -7807,11 +7806,11 @@
    "execution_count": 48,
    "id": "dd00a864-8729-484a-986f-47f10d7cb8ae",
    "metadata": {
-    "caption": "The group of images shows the effect on the classification by the choice of the different SVC kernels (`linear`, `rbf`, `poly`)",
+    "caption": "This group of images shows the effect on the classification by the choice of the different SVC kernels ('linear', 'rbf', 'poly')",
     "label": "fig:vary_kernels",
     "scrolled": true,
     "tags": [],
-    "widefigure": true
+    "widefigure": false
    },
    "outputs": [
     {
@@ -7873,11 +7872,11 @@
    "execution_count": 49,
    "id": "d239d35b-bb53-477e-abb2-d972e98f5e13",
    "metadata": {
-    "caption": "The group of images shows the effect on the classification by the variation of the parameter `gamma`",
+    "caption": "This group of images shows the effect on the classification by the variation of the parameter 'gamma'",
     "label": "fig:vary_gamma_parameter",
     "scrolled": true,
     "tags": [],
-    "widefigure": true
+    "widefigure": false
    },
    "outputs": [
     {
@@ -7959,11 +7958,11 @@
    "execution_count": 50,
    "id": "8489bd76-9cfb-43d7-8562-e3d81c9b9c51",
    "metadata": {
-    "caption": "The group of images shows the effect on the classification by the variation of the parameter `C`",
+    "caption": "This group of images shows the effect on the classification by the variation of the parameter 'C'",
     "label": "fig:vary_c_parameter",
     "scrolled": true,
     "tags": [],
-    "widefigure": true
+    "widefigure": false
    },
    "outputs": [
     {
@@ -8055,11 +8054,11 @@
    "execution_count": 51,
    "id": "43c2bcfb-a1ae-4f59-af0d-6fa621c3e9ff",
    "metadata": {
-    "caption": "The group of images shows the effect on the classification by the variation of the parameter `degree` of the `poly` kernel",
+    "caption": "This group of images shows the effect on the classification by the variation of the parameter 'degree' of the 'poly' kernel",
     "label": "fig:vary_degree_parameter",
     "scrolled": true,
     "tags": [],
-    "widefigure": true
+    "widefigure": false
    },
    "outputs": [
     {
@@ -8209,7 +8208,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
