added Venn diagram for AI, ML and others

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -6855,10 +6855,27 @@
     "\n",
     "## Relationship between AI, ML and others\n",
     "\n",
-    "Sources:\n",
-    "\n",
-    "- [Emerging technologies based on artificial intelligence to assess quality and consumer preference of beverages](https://www.researchgate.net/publication/336375517_Emerging_technologies_based_on_artificial_intelligence_to_assess_quality_and_consumer_preference_of_beverages), Figure 5\n",
-    "\n",
+    "The following Venn diagram shows the relationship between Artificial Intelligence (AI), Machine Learning (ML) and other integrated technologies. The quantities that do not belong to the main category represent techniques that can function as stand-alone techniques and do not necessarily fall into the artificial intelligence group in all cases (for further details see [Emerging technologies based on artificial intelligence to assess quality and consumer preference of beverages](https://www.researchgate.net/publication/336375517_Emerging_technologies_based_on_artificial_intelligence_to_assess_quality_and_consumer_preference_of_beverages), Figure 5)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7fe8560e-f2c1-48fc-8f6b-2a501fa6db32",
+   "metadata": {
+    "caption": "",
+    "label": "fig:scikit-learn_ml_algorithm_decision",
+    "tags": [],
+    "widefigure": true
+   },
+   "source": [
+    "![Venn diagram showing the relationship between Artificial Intelligence (AI), Machine Learning (ML) and other integrated technologies (source: Kasper, adapted from [Emerging technologies based on artificial intelligence to assess quality and consumer preference of beverages](https://www.researchgate.net/publication/336375517_Emerging_technologies_based_on_artificial_intelligence_to_assess_quality_and_consumer_preference_of_beverages), license: CC-BY-SA 4.0)](images/AI_ML_venn_diagram.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f5f5ff3-2053-4e8a-8705-eee3a4b33587",
+   "metadata": {},
+   "source": [
     "## Taxonomy of machine learning\n",
     "\n",
     "Sources:\n",
@@ -6915,7 +6932,7 @@
     "\n",
     "In this step the dataset is prepared for the actual classification by SVC. Depending on the selected ML algorithm as well as the data structure, it may be necessary to prepare the data before training (e.g., by **standardization**, **normalization**, or **binarization** based on thresholds). Furthermore, errors in the dataset (e.g. **data gaps**, **duplicates** or obvious **misentries**) should be corrected now at the latest.\n",
     "\n",
-    "Through the intensive exploration of the data in Step 2 ([STEP 2: Explore the ML dataset](#STEP-2:-Explore-the-ML-dataset)), we know that special **preparation** of the data is **not necessary**. The values are complete and without gaps and there are no duplicates. The values are in similar ranges, which **does not require normalization** of the data.\n",
+    "Through the intensive exploration of the data in ([STEP 2: Explore the ML dataset](#STEP-2:-Explore-the-ML-dataset)), we know that special **preparation** of the data is **not necessary**. The values are complete and without gaps and there are no duplicates. The values are in similar ranges, which **does not require normalization** of the data.\n",
     "\n",
     "Furthermore, we know that the **classes** are very **evenly distributed** and thus bias tendencies should be avoided."
    ]
@@ -8137,7 +8154,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.3"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
