small changes to 'Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb'

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -6863,9 +6863,9 @@
    "id": "7fe8560e-f2c1-48fc-8f6b-2a501fa6db32",
    "metadata": {
     "caption": "",
-    "label": "fig:scikit-learn_ml_algorithm_decision",
+    "label": "fig:AI_ML_venn_diagram",
     "tags": [],
-    "widefigure": true
+    "widefigure": false
    },
    "source": [
     "![Venn diagram showing the relationship between Artificial Intelligence (AI), Machine Learning (ML) and other integrated technologies (source: Kasper, adapted from [Emerging technologies based on artificial intelligence to assess quality and consumer preference of beverages](https://www.researchgate.net/publication/336375517_Emerging_technologies_based_on_artificial_intelligence_to_assess_quality_and_consumer_preference_of_beverages), license: CC-BY-SA 4.0)](images/AI_ML_venn_diagram.png)"
