corrected URLs in 'Literature_MNIST_tutorials.ipynb'

--- a/Literature_MNIST_tutorials.ipynb
+++ b/Literature_MNIST_tutorials.ipynb
@@ -13,24 +13,24 @@
     "\n",
     "### Machine learning (approaches and types)\n",
     "\n",
-    "- [Machine learning](https://en.m.wikipedia.org/wiki/Machine_learning)\n",
-    "    - [Artificial intelligence (AI)](https://en.m.wikipedia.org/wiki/Machine_learning#Artificial_intelligence)\n",
+    "- [Machine learning](https://en.wikipedia.org/wiki/Machine_learning)\n",
+    "    - [Artificial intelligence (AI)](https://en.wikipedia.org/wiki/Machine_learning#Artificial_intelligence)\n",
     "    - Approaches:\n",
-    "        - [Supervised learning](https://en.m.wikipedia.org/wiki/Machine_learning#Supervised_learning)\n",
+    "        - [Supervised learning](https://en.wikipedia.org/wiki/Machine_learning#Supervised_learning)\n",
     "            - Types of supervised-learning algorithms:\n",
-    "                - [Active learning (machine learning)](https://en.m.wikipedia.org/wiki/Active_learning_(machine_learning))\n",
-    "                - [Statistical classification](https://en.m.wikipedia.org/wiki/Statistical_classification)\n",
-    "                - [Regression analysis](https://en.m.wikipedia.org/wiki/Regression_analysis)\n",
-    "        - [Unsupervised learning](https://en.m.wikipedia.org/wiki/Machine_learning#Unsupervised_learning)\n",
-    "        - [Reinforcement learning](https://en.m.wikipedia.org/wiki/Machine_learning#Reinforcement_learning)\n",
+    "                - [Active learning (machine learning)](https://en.wikipedia.org/wiki/Active_learning_(machine_learning))\n",
+    "                - [Statistical classification](https://en.wikipedia.org/wiki/Statistical_classification)\n",
+    "                - [Regression analysis](https://en.wikipedia.org/wiki/Regression_analysis)\n",
+    "        - [Unsupervised learning](https://en.wikipedia.org/wiki/Machine_learning#Unsupervised_learning)\n",
+    "        - [Reinforcement learning](https://en.wikipedia.org/wiki/Machine_learning#Reinforcement_learning)\n",
     "\n",
     "### Overfitting\n",
     "\n",
-    "- [Overfitting: Machine_learning](https://en.m.wikipedia.org/wiki/Overfitting#Machine_learning)\n",
+    "- [Overfitting: Machine_learning](https://en.wikipedia.org/wiki/Overfitting#Machine_learning)\n",
     "\n",
     "### Confusion matrix\n",
     "\n",
-    "- [Confusion matrix](https://en.m.wikipedia.org/wiki/Confusion_matrix)\n",
+    "- [Confusion matrix](https://en.wikipedia.org/wiki/Confusion_matrix)\n",
     "- [Everything you Should Know about Confusion Matrix for Machine Learning](https://www.analyticsvidhya.com/blog/2020/04/confusion-matrix-machine-learning/)\n",
     "- [What is a Confusion Matrix in Machine Learning](https://machinelearningmastery.com/confusion-matrix-machine-learning/)\n",
     "\n",
@@ -39,7 +39,7 @@
     "\n",
     "### *k*-nearest neighbors algorithm\n",
     "\n",
-    "- [k-nearest neighbors algorithm](https://en.m.wikipedia.org/wiki/K-nearest_neighbors_algorithm)\n",
+    "- [k-nearest neighbors algorithm](https://en.wikipedia.org/wiki/K-nearest_neighbors_algorithm)\n",
     "\n",
     "### Support vector machines (SVM) / Support vector classifier (SVC)\n",
     "\n",
@@ -56,24 +56,24 @@
     "\n",
     "### Random forests / random decision forests\n",
     "\n",
-    "- [Random forests or random decision forests](https://en.m.wikipedia.org/wiki/Random_forest)\n",
+    "- [Random forests or random decision forests](https://en.wikipedia.org/wiki/Random_forest)\n",
     "\n",
     "### Convolutional neural network (CNN)\n",
     "\n",
-    "- [Artificial neural network (ANN)](https://en.m.wikipedia.org/wiki/Artificial_neural_network)\n",
-    "- [Convolutional neural network](https://en.m.wikipedia.org/wiki/Convolutional_neural_network)\n",
-    "- [Deep learning (deep structured learning)](https://en.m.wikipedia.org/wiki/Deep_learning)\n",
-    "- [Feedforward neural network (FNN)](https://en.m.wikipedia.org/wiki/Feedforward_neural_network)\n",
-    "    - [Single-layer perceptron](https://en.m.wikipedia.org/wiki/Feedforward_neural_network#Single-layer_perceptron)\n",
-    "    - [Multi-layer perceptron](https://en.m.wikipedia.org/wiki/Feedforward_neural_network#Multi-layer_perceptron)\n",
-    "- [Artificial neuron](https://en.m.wikipedia.org/wiki/Artificial_neuron)\n",
-    "- [Perceptron](https://en.m.wikipedia.org/wiki/Perceptron)\n",
-    "- [Activation function](https://en.m.wikipedia.org/wiki/Activation_function)\n",
-    "    - [Table of activation functions](https://en.m.wikipedia.org/wiki/Activation_function#Table_of_activation_functions)\n",
-    "    - [Heaviside step function](https://en.m.wikipedia.org/wiki/Heaviside_step_function)\n",
-    "    - [Rectified Linear Unit (ReLu function)](https://en.m.wikipedia.org/wiki/Rectifier_(neural_networks))\n",
-    "    - [Sigmoid function](https://en.m.wikipedia.org/wiki/Sigmoid_function)\n",
-    "- [Loss function or cost function](https://en.m.wikipedia.org/wiki/Loss_function)\n"
+    "- [Artificial neural network (ANN)](https://en.wikipedia.org/wiki/Artificial_neural_network)\n",
+    "- [Convolutional neural network](https://en.wikipedia.org/wiki/Convolutional_neural_network)\n",
+    "- [Deep learning (deep structured learning)](https://en.wikipedia.org/wiki/Deep_learning)\n",
+    "- [Feedforward neural network (FNN)](https://en.wikipedia.org/wiki/Feedforward_neural_network)\n",
+    "    - [Single-layer perceptron](https://en.wikipedia.org/wiki/Feedforward_neural_network#Single-layer_perceptron)\n",
+    "    - [Multi-layer perceptron](https://en.wikipedia.org/wiki/Feedforward_neural_network#Multi-layer_perceptron)\n",
+    "- [Artificial neuron](https://en.wikipedia.org/wiki/Artificial_neuron)\n",
+    "- [Perceptron](https://en.wikipedia.org/wiki/Perceptron)\n",
+    "- [Activation function](https://en.wikipedia.org/wiki/Activation_function)\n",
+    "    - [Table of activation functions](https://en.wikipedia.org/wiki/Activation_function#Table_of_activation_functions)\n",
+    "    - [Heaviside step function](https://en.wikipedia.org/wiki/Heaviside_step_function)\n",
+    "    - [Rectified Linear Unit (ReLu function)](https://en.wikipedia.org/wiki/Rectifier_(neural_networks))\n",
+    "    - [Sigmoid function](https://en.wikipedia.org/wiki/Sigmoid_function)\n",
+    "- [Loss function or cost function](https://en.wikipedia.org/wiki/Loss_function)\n"
    ]
   },
   {
@@ -164,7 +164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.13"
   },
   "toc-autonumbering": true
  },
