splitted sections in 'Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb'

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -6893,7 +6893,9 @@
   {
    "cell_type": "markdown",
    "id": "0f5f5ff3-2053-4e8a-8705-eee3a4b33587",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Taxonomy of machine learning\n",
     "\n",
@@ -6910,9 +6912,14 @@
     "- [Comprehensive Survey of Machine Learning Approaches in Cognitive Radio-Based Vehicular Ad Hoc Networks](https://www.researchgate.net/publication/340878018_Comprehensive_Survey_of_Machine_Learning_Approaches_in_Cognitive_Radio-Based_Vehicular_Ad_Hoc_Networks)\n",
     "- [A Taxonomy of Machine Learning Techniques](https://www.researchgate.net/publication/358089496_A_Taxonomy_of_Machine_Learning_Techniques)\n",
     "- [ML Algorithms: One SD](https://medium.com/@Shaier/ml-algorithms-one-sd-%CF%83-74bcb28fafb6)\n",
-    "- [Machine Learning Map](https://github.com/trekhleb/homemade-machine-learning#machine-learning-map)\n",
-    "\n",
-    "\n",
+    "- [Machine Learning Map](https://github.com/trekhleb/homemade-machine-learning#machine-learning-map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "88c4b891-b2e5-44ac-ad69-896b19b2b6c3",
+   "metadata": {},
+   "source": [
     "#### Supervised learning\n",
     "\n",
     "The goal of **supervised learning (SL)** is to learn a **function** that maps a **input to an output**, based on example input-output pairs. This involves inferring a relationship describable by a mathematical function from **labeled training data** consisting of a set of training examples (see [Supervised Learning](https://en.wikipedia.org/wiki/Supervised_learning)).\n",
@@ -6925,8 +6932,14 @@
     "- Artificial Neural Networks (ANN)\n",
     "- Support Vector Classifier (SVC)\n",
     "- Decision Trees\n",
-    "- Random Forests\n",
-    "\n",
+    "- Random Forests"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebc7553d-62fb-4288-9349-1852ccc9012b",
+   "metadata": {},
+   "source": [
     "#### Unsupervised learning\n",
     "\n",
     "The algorithms of this category look for internal structures in the data of a dataset, such as **grouping** or **clustering of data points**. These algorithms can thus learn relationships from test data that have not been labeled, classified, or categorized. Rather than responding to feedback (as in supervised learning), unsupervised learning algorithms detect **commonalities in the data** and respond based on the presence or absence of such commonalities in each new dataset (see [Unsupervised learning](https://en.wikipedia.org/wiki/Machine_learning#Unsupervised_learning)).\n",
@@ -6936,12 +6949,24 @@
     "- K-means Clustering\n",
     "- Spectral Clustering\n",
     "- Hierarchical Clustering\n",
-    "- Principal Component Analysis (PCA)\n",
-    "\n",
+    "- Principal Component Analysis (PCA)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9aa32abe-fc2a-4287-a03e-167a99f39e95",
+   "metadata": {},
+   "source": [
     "#### Semi-supervised learning\n",
     "\n",
-    "This type of learning falls between **unsupervised** learning (without any labeled training data) and **supervised** learning (with completely labeled training data). Some of the training examples are missing training labels, yet many machine-learning researchers have found that unlabeled data, when used in conjunction with a small amount of labeled data, can produce a considerable improvement in learning accuracy (source: [Semi-supervised learning](https://en.wikipedia.org/wiki/Machine_learning#Semi-supervised_learning)).\n",
-    "\n",
+    "This type of learning falls between **unsupervised** learning (without any labeled training data) and **supervised** learning (with completely labeled training data). Some of the training examples are missing training labels, yet many machine-learning researchers have found that unlabeled data, when used in conjunction with a small amount of labeled data, can produce a considerable improvement in learning accuracy (source: [Semi-supervised learning](https://en.wikipedia.org/wiki/Machine_learning#Semi-supervised_learning))."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cafda29d-6e08-4293-bf87-05c8999e54a2",
+   "metadata": {},
+   "source": [
     "#### Reinforcement learning\n",
     "\n",
     "This is an area of machine learning concerned with how **intelligent agents** ought to **take actions in an environment** in order to maximize the notion of cumulative **reward**. Due to its generality, the field is studied in many other disciplines, such as **game theory** and **control theory**.\n",
