--- a/playground/SVC_vary_parameters_pd.ipynb
+++ b/playground/SVC_vary_parameters_pd.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a9dd9305-3279-4a56-901d-17f2f8c992b1",
    "metadata": {},
    "outputs": [],
@@ -179,6 +179,58 @@
     "# encode the class column from class strings to integer equivalents\n",
     "irisdata_df_enc = irisdata_df.replace({\"species\":  {\"Iris-setosa\":0,\"Iris-versicolor\":1, \"Iris-virginica\":2}})\n",
     "irisdata_df_enc"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e2345d1b-224e-44ca-8232-8d1716276e31",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/markdown": [
+       "|    | First Name   | Gender   | Start Date   | Last Login Time   |   Salary |   Bonus % |   Senior Management | Team                 |\n",
+       "|---:|:-------------|:---------|:-------------|:------------------|---------:|----------:|--------------------:|:---------------------|\n",
+       "|  0 | Douglas      | Male     | 8/6/1993     | 12:42 PM          |    97308 |   6945    |                   1 | Marketing            |\n",
+       "|  1 | Thomas       | Male     | 3/31/1996    | 6:53 AM           |    61933 |      4.17 |                   1 | nan                  |\n",
+       "|  2 | Maria        | Female   | 4/23/1993    | 11:17 AM          |   130590 |  11858    |                   0 | Finance              |\n",
+       "|  3 | Jerry        | Male     | 3/4/2005     | 1:00 PM           |   138705 |      9.34 |                   1 | Finance              |\n",
+       "|  4 | Larry        | Male     | 1/24/1998    | 4:47 PM           |   101004 |   1389    |                   1 | Client Services      |\n",
+       "|  5 | Dennis       | Male     | 4/18/1987    | 1:35 AM           |   115163 |  10125    |                   0 | Legal                |\n",
+       "|  6 | Ruby         | Female   | 8/17/1987    | 4:20 PM           |    65476 |  10012    |                   1 | Product              |\n",
+       "|  7 | nan          | Female   | 7/20/2015    | 10:43 AM          |    45906 |  11598    |                 nan | Finance              |\n",
+       "|  8 | Angela       | Female   | 11/22/2005   | 6:29 AM           |    95570 |  18523    |                   1 | Engineering          |\n",
+       "|  9 | Frances      | Female   | 8/8/2002     | 6:51 AM           |   139852 |   7524    |                   1 | Business Development |\n",
+       "| 10 | Louise       | Female   | 8/12/1980    | 9:01 AM           |    63241 |  15132    |                   1 | nan                  |\n",
+       "| 11 | Julie        | Female   | 10/26/1997   | 3:19 PM           |   102508 |  12637    |                   1 | Legal                |\n",
+       "| 12 | Brandon      | Male     | 12/1/1980    | 1:08 AM           |   112807 |  17492    |                   1 | Human Resources      |\n",
+       "| 13 | Gary         | Male     | 1/27/2008    | 11:40 PM          |   109831 |   5831    |                   0 | Sales                |\n",
+       "| 14 | Kimberly     | Female   | 1/14/1999    | 7:13 AM           |    41426 |  14543    |                   1 | Finance              |\n",
+       "| 15 | Lillian      | Female   | 6/5/2016     | 6:09 AM           |    59414 |   1256    |                   0 | Product              |\n",
+       "| 16 | Jeremy       | Male     | 9/21/2010    | 5:56 AM           |    90370 |   7369    |                   0 | Human Resources      |\n",
+       "| 17 | Shawn        | Male     | 12/7/1986    | 7:45 PM           |   111737 |   6414    |                   0 | Product              |\n",
+       "| 18 | Diana        | Female   | 10/23/1981   | 10:27 AM          |   132940 |  19082    |                   0 | Client Services      |\n",
+       "| 19 | Donna        | Female   | 7/22/2010    | 3:48 AM           |    81014 |   1894    |                   0 | Product              |"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Markdown object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# import data to dataframe from csv file\n",
+    "employees_df = pd.read_csv(\"../datasets/employees_edit.csv\")\n",
+    "\n",
+    "# https://stackoverflow.com/questions/20685635/pandas-dataframe-as-latex-or-html-table-nbconvert/61496015#61496015\n",
+    "from IPython.display import Markdown, display\n",
+    "\n",
+    "employees_df_head = employees_df.head(20)\n",
+    "\n",
+    "display(Markdown(employees_df_head.to_markdown()))"
    ]
   },
   {
