folded toc to main steps in 'Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb'

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "markdown",
    "id": "817e6dc4-264c-44b1-b467-680529aeda24",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "# Introduction"
    ]
@@ -151,7 +153,9 @@
    "cell_type": "markdown",
    "id": "359fa3b1-7211-4470-b228-ef20d9058251",
    "metadata": {
-    "incorrectly_encoded_metadata": "tags=[] toc-hr-collapsed=true"
+    "incorrectly_encoded_metadata": "tags=[] toc-hr-collapsed=true",
+    "tags": [],
+    "toc-hr-collapsed": true
    },
    "source": [
     "# STEP 0: Select hardware and software suitable for ML\n",
@@ -225,7 +229,8 @@
    "cell_type": "markdown",
    "id": "50a2bb9d-a80d-479e-bdb2-eef7c3809f8f",
    "metadata": {
-    "incorrectly_encoded_metadata": "tags=[] toc-hr-collapsed=true toc-hr-collapsed=true"
+    "incorrectly_encoded_metadata": "tags=[] toc-hr-collapsed=true toc-hr-collapsed=true",
+    "toc-hr-collapsed": true
    },
    "source": [
     "# STEP 2: Explore the ML dataset\n",
@@ -30306,7 +30311,10 @@
   {
    "cell_type": "markdown",
    "id": "986dc788-5c40-4951-80ed-efa108a50204",
-   "metadata": {},
+   "metadata": {
+    "tags": [],
+    "toc-hr-collapsed": true
+   },
    "source": [
     "# STEP 3: Choose and create the ML model\n",
     "\n",
@@ -30552,7 +30560,10 @@
   {
    "cell_type": "markdown",
    "id": "72a04b84-457a-4ba8-8892-aaa1862b0060",
-   "metadata": {},
+   "metadata": {
+    "tags": [],
+    "toc-hr-collapsed": true
+   },
    "source": [
     "# STEP 5: Carry out training, prediction and testing\n",
     "\n",
@@ -30690,7 +30701,9 @@
   {
    "cell_type": "markdown",
    "id": "6e2e6598-0dd0-4f4d-820c-5cdc6f48d827",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "# STEP 6: Evaluate model's performance\n",
     "\n",
@@ -30893,7 +30906,9 @@
   {
    "cell_type": "markdown",
    "id": "1d663dfd-bf5b-4d0d-8ca6-f1ac06575f6f",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
    "source": [
     "# STEP 7: Vary parameters of the ML model manually\n",
     "\n",
@@ -31695,7 +31710,10 @@
   {
    "cell_type": "markdown",
    "id": "ee9c2ad8-244e-46e5-bc62-5841108787e9",
-   "metadata": {},
+   "metadata": {
+    "tags": [],
+    "toc-hr-collapsed": true
+   },
    "source": [
     "# STEP 8: Tune the ML model systematically\n",
     "\n",
