reworked 'SVM_classification_hypertuning.ipynb' after feedback discussion among colleagues

--- a/SVM_regression_hypertuning.ipynb
+++ b/SVM_regression_hypertuning.ipynb
@@ -101,7 +101,7 @@
     "# take only last comlumn for ages\n",
     "dataY = dataset[dataset.columns[-1]]\n",
     "# split into train and test data subsets (ratio: 85% to 15%)\n",
-    "(trainX, testX, trainY, testY) = train_test_split(dataX, dataY, random_state=3, test_size=0.15)"
+    "(trainX, testX, trainY, testY) = train_test_split(dataX, dataY, random_state=3, test_size=0.15, shuffle=True)"
    ]
   },
   {
@@ -538,7 +538,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.12"
   }
  },
  "nbformat": 4,
