added @TODOs to include Steimer's presentations in 'Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb'

--- a/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
+++ b/Step-by-step_intro_to_ML_with_SVC_and_Iris.ipynb
@@ -124,12 +124,18 @@
    "id": "359fa3b1-7211-4470-b228-ef20d9058251",
    "metadata": {
     "incorrectly_encoded_metadata": "tags=[] toc-hr-collapsed=true toc-hr-collapsed=true",
-    "tags": []
+    "tags": [
+     "TODO_Step_0",
+     "STEP_0"
+    ]
    },
    "source": [
     "# STEP 0: Select hardware and software suitable for ML\n",
     "\n",
     "In this step, specific guidance is provided for selecting hardware and software suitable for machine learning.\n",
+    "\n",
+    "**@TODO:**\n",
+    "Include in this section the presentation `IFA_Steimers_Industry_Risikoquellen_KI_2021-03-05.pdf` by Prof. Steimers (IFA) slide 15 \"System Hardware\": Distinction between **Training and Application System**.\n",
     "\n",
     "## Hardware\n",
     "\n",
@@ -210,7 +216,9 @@
    "cell_type": "markdown",
    "id": "333ccfb3-b874-4ae5-8b51-2423fae87c69",
    "metadata": {
-    "tags": []
+    "tags": [
+     "STEP_1"
+    ]
    },
    "source": [
     "# STEP 1: Acquire the ML dataset\n",
@@ -237,7 +245,10 @@
    "cell_type": "markdown",
    "id": "50a2bb9d-a80d-479e-bdb2-eef7c3809f8f",
    "metadata": {
-    "incorrectly_encoded_metadata": "tags=[] toc-hr-collapsed=true toc-hr-collapsed=true toc-hr-collapsed=true"
+    "incorrectly_encoded_metadata": "tags=[] toc-hr-collapsed=true toc-hr-collapsed=true toc-hr-collapsed=true",
+    "tags": [
+     "STEP_2"
+    ]
    },
    "source": [
     "# STEP 2: Explore the ML dataset\n",
@@ -6148,7 +6159,10 @@
    "id": "986dc788-5c40-4951-80ed-efa108a50204",
    "metadata": {
     "incorrectly_encoded_metadata": "toc-hr-collapsed=true",
-    "tags": []
+    "tags": [
+     "TODO_Step_3",
+     "STEP_3"
+    ]
    },
    "source": [
     "# STEP 3: Choose and create the ML model\n",
@@ -6160,6 +6174,11 @@
     "## Short overview of the AI world and its ML algorithms\n",
     "\n",
     "### Relationship between AI, ML and others\n",
+    "\n",
+    "**@TODO:**\n",
+    "Include in this section the presentation `IFA_Steimers_KI_Grundlagen_Neuronaler_Netze_2021-03-22.pdf` by Prof. Steimers (IFA):\n",
+    "- slides 6-7 \"Definition of KI\"\n",
+    "- slides 10-12 \"ML: Categories based on the data, task and algorithms\"\n",
     "\n",
     "In the **science world**, the term **artificial intelligence (AI)** refers to machines and systems that are capable of performing tasks that are characteristic of human intelligence.\n",
     "\n",
@@ -6382,7 +6401,9 @@
    "cell_type": "markdown",
    "id": "66d2b933-45de-49d4-9af5-2e56a6e7dc14",
    "metadata": {
-    "tags": []
+    "tags": [
+     "STEP_4"
+    ]
    },
    "source": [
     "# STEP 4: Prepare the dataset for training\n",
@@ -6594,7 +6615,9 @@
    "id": "72a04b84-457a-4ba8-8892-aaa1862b0060",
    "metadata": {
     "incorrectly_encoded_metadata": "toc-hr-collapsed=true",
-    "tags": []
+    "tags": [
+     "STEP_5"
+    ]
    },
    "source": [
     "# STEP 5: Carry out training, prediction and testing\n",
@@ -6746,7 +6769,10 @@
    "cell_type": "markdown",
    "id": "6e2e6598-0dd0-4f4d-820c-5cdc6f48d827",
    "metadata": {
-    "incorrectly_encoded_metadata": "toc-hr-collapsed=true"
+    "incorrectly_encoded_metadata": "toc-hr-collapsed=true",
+    "tags": [
+     "STEP_6"
+    ]
    },
    "source": [
     "# STEP 6: Evaluate model's performance\n",
@@ -6951,7 +6977,10 @@
    "cell_type": "markdown",
    "id": "1d663dfd-bf5b-4d0d-8ca6-f1ac06575f6f",
    "metadata": {
-    "incorrectly_encoded_metadata": "toc-hr-collapsed=true"
+    "incorrectly_encoded_metadata": "toc-hr-collapsed=true",
+    "tags": [
+     "STEP_7"
+    ]
    },
    "source": [
     "# STEP 7: Vary parameters of the ML model manually\n",
@@ -7698,7 +7727,9 @@
    "id": "ee9c2ad8-244e-46e5-bc62-5841108787e9",
    "metadata": {
     "incorrectly_encoded_metadata": "toc-hr-collapsed=true",
-    "tags": []
+    "tags": [
+     "STEP_8"
+    ]
    },
    "source": [
     "# STEP 8: Tune the ML model systematically\n",
@@ -8548,7 +8579,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.7.3"
   },
   "latex_metadata": {
    "affiliation": "Test and Certification Body for Electrical Engineering at BG ETEM",
@@ -8560,7 +8591,7 @@
   "toc-autonumbering": true,
   "toc-showcode": false,
   "toc-showmarkdowntxt": false,
-  "toc-showtags": false
+  "toc-showtags": true
  },
  "nbformat": 4,
  "nbformat_minor": 5
